Closed Bug 394335 Opened 17 years ago Closed 17 years ago

Enum mapping for <marker> incorrect

Categories

(Core :: SVG, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: tor, Unassigned)

Details

Attachments

(1 file)

Copy/paste error from switching over to new style enum.
Attachment #278980 - Flags: superreview?(roc)
Attachment #278980 - Flags: review?(longsonr)
Attachment #278980 - Flags: review?(longsonr) → review+
Attachment #278980 - Flags: superreview?(roc)
Attachment #278980 - Flags: superreview+
Attachment #278980 - Flags: approval1.9+
Checked in.
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: