Bug 394335 - incorrect mapping for marker units enum.  r=longsonr, sr+a=roc